Attempt to fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ body {
 header {
   background-color: #d05c2e;
   color: #fff;
-  align-items: center;
 }
 
 h1 {
@@ -32,6 +31,11 @@ img {
   padding: .5em 0;
   display: flex;
   justify-content: space-between;
+  margin: 0;
+}
+
+nav {
+  margin: 0;
 }
 
 .list {
@@ -41,6 +45,7 @@ img {
   display: flex;
   justify-content: space-around;
   text-align: center;
+  align-items: center;
 }
 
 li {
